@@ -309,10 +309,8 @@ WXHARBOUR_OBJECTS =  \
 	$(__BUILDDIR__)\wxHarbour_xdoutils.obj \
 	$(__BUILDDIR__)\wxHarbour_sysdefs.obj \
 	$(__BUILDDIR__)\wxHarbour_wx_harbour.obj \
-	$(__BUILDDIR__)\wxHarbour_wxh_scopelist.obj \
 	$(__BUILDDIR__)\wxHarbour_xhb2hb.obj \
 	$(__BUILDDIR__)\wxHarbour_wx_functions.obj \
-	$(__BUILDDIR__)\wxHarbour_wx_Browse.obj \
 	$(__BUILDDIR__)\wxHarbour_wx_GridBrowse.obj \
 	$(__BUILDDIR__)\wxHarbour_TRDOServer_c.obj \
 	$(__BUILDDIR__)\wxHarbour_TTable_c.obj \
@@ -906,17 +904,11 @@ $(__BUILDDIR__)\wxHarbour_sysdefs.obj: .\src\common\sysdefs.cpp
 $(__BUILDDIR__)\wxHarbour_wx_harbour.obj: .\src\common\wx_harbour.cpp
 	$(CXX) -q -c -P -o$@ $(WXHARBOUR_CXXFLAGS) .\src\common\wx_harbour.cpp
 
-$(__BUILDDIR__)\wxHarbour_wxh_scopelist.obj: .\src\common\wxh_scopelist.cpp
-	$(CXX) -q -c -P -o$@ $(WXHARBOUR_CXXFLAGS) .\src\common\wxh_scopelist.cpp
-
 $(__BUILDDIR__)\wxHarbour_xhb2hb.obj: .\src\common\xhb2hb.cpp
 	$(CXX) -q -c -P -o$@ $(WXHARBOUR_CXXFLAGS) .\src\common\xhb2hb.cpp
 
 $(__BUILDDIR__)\wxHarbour_wx_functions.obj: .\src\hrbcompat\misc\wx_functions.cpp
 	$(CXX) -q -c -P -o$@ $(WXHARBOUR_CXXFLAGS) .\src\hrbcompat\misc\wx_functions.cpp
-
-$(__BUILDDIR__)\wxHarbour_wx_Browse.obj: .\src\hrbcompat\tbrowse\wx_Browse.cpp
-	$(CXX) -q -c -P -o$@ $(WXHARBOUR_CXXFLAGS) .\src\hrbcompat\tbrowse\wx_Browse.cpp
 
 $(__BUILDDIR__)\wxHarbour_wx_GridBrowse.obj: .\src\hrbcompat\tbrowse\wx_GridBrowse.cpp
 	$(CXX) -q -c -P -o$@ $(WXHARBOUR_CXXFLAGS) .\src\hrbcompat\tbrowse\wx_GridBrowse.cpp
